<resources>
    <string name="app_name">Gasto de viagens</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="total_de_quilometros">Total de Quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_ser_de">seu gasto total será de:</string>
    <string name="totalvalor">R$ 0</string>
    <string name="buttoncalcular">calcular</string>
    <string name="informe_valores_validos">Por favor, informe valores válidos</string>
    <string name="preencha_os_campos">Preencha todos os campos!</string>
</resources>